@@ -1,0 +1,1 @@
+int intersectSegments( double x1, double y1, double x2, double y2, double x3, double y3, double x4, double y4, double *x, double *y, double *xa, double *ya);
